--- a/DiceGame/dicee.html
+++ b/DiceGame/dicee.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Dicee</title>
+    <title>Dicee Game</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
@@ -13,28 +13,38 @@
     <div class="container">
       <h1>Refresh Me</h1>
       <h5>Who won?</h5>
-      <div class="dice">
-        <p>Player 1</p>
-        <img class="img1" src="./images/dice1.png"/>
-      </div>
 
-      <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="./images/dice1.png"/>
+      <div class="players">
+        <div class="glass-card dice">
+          <p>Player 1</p>
+          <img class="img1" src="./images/dice1.png" />
+        </div>
+
+        <div class="glass-card dice">
+          <p>Player 2</p>
+          <img class="img2" src="./images/dice1.png" />
+        </div>
       </div>
     </div>
 
     <footer>www 🎲 App Brewery 🎲 com</footer>
+
     <script>
-      function random(){
-        return Math.random()*6+1;
+      function random() {
+        return Math.floor(Math.random() * 6) + 1;
       }
-      var dice1=Math.floor(random());
-      var dice2=Math.floor(random());
-      document.querySelector(".img1").src="images/dice"+dice1+".png";
-      document.querySelector(".img2").src="images/dice"+dice2+".png";
-      var max=Math.max(dice1,dice2);
-      document.querySelector("h5").innerHTML="Player "+max+" Won";
+
+      const dice1 = random();
+      const dice2 = random();
+
+      document.querySelector(".img1").src = "images/dice" + dice1 + ".png";
+      document.querySelector(".img2").src = "images/dice" + dice2 + ".png";
+
+      let winnerText = "It's a Draw!";
+      if (dice1 > dice2) winnerText = "Player 1 Won!";
+      else if (dice2 > dice1) winnerText = "Player 2 Won!";
+
+      document.querySelector("h5").innerHTML = winnerText;
     </script>
   </body>
 </html>
