--- a/DiceGame/dicee.html
+++ b/DiceGame/dicee.html
@@ -12,8 +12,7 @@
   <body>
     <div class="container">
       <h1>Refresh Me</h1>
-      <h5>Who won?</h5>
-
+      <h5>Who won??</h5>
       <div class="players">
         <div class="glass-card dice">
           <p>Player 1</p>
