--- a/DiceGame/dicee.html
+++ b/DiceGame/dicee.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>www 🎲 DiceGame 🎲 com</footer>
 
     <script>
       function random() {
